ga code and fix game cta spacing

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -521,6 +521,10 @@ footer {
     justify-content: center;
     align-items: center;
 
+    .button-wrapper {
+        margin: .5rem;
+    }
+
     .button {
         margin: 1rem;
     }
